feat: polling execution status
